REGRESSION (r259930): Dictation marker at start of text is removed when added trailing whitespace is collapsed https://bugs.webkit.org/show_bug.cgi?id=212093

Reviewed by Daniel Bates.

Source/WebCore:

* dom/DocumentMarkerController.cpp:
(WebCore::DocumentMarkerController::shiftMarkers): Use int to do the math before clamping to
unsigned. This protects against underflow.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/InsertTextAlternatives.mm:
(TestWebKitAPI::TEST): Expect success rather than failure.


Canonical link: https://commits.webkit.org/224989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261903 268f45cc-cd09-0410-ab3c-d52691b4dbfc